# 3d-llm

./: .gitignore  ML-ACCURACY-REVIEW.md  README.md  package-lock.json  package.json
.openai/: hosting.json
app/: globals.css  layout.tsx  page.tsx
app/components/: TrainingExperience.module.css  TrainingExperience.tsx  TrainingHUD.module.css  TrainingHUD.tsx  TrainingWorldCanvas.module.css  TrainingWorldCanvas.tsx  machineRoom.ts
app/components/assistant/: AssistantAvatar.ts  AssistantController.ts  AssistantDock.module.css  AssistantDock.tsx  index.ts  realtimeAssistantTypes.ts  types.ts  useRealtimeAssistant.ts
app/components/chambers/: attentionProcesses.ts  earlyProcesses.ts  index.ts  (+2 more)
app/custom-training/: page.tsx
app/lib/: assistantAppTools.ts  assistantContext.ts  customTrainingTypes.ts  generatedTrainingCode.ts  trainingClient.ts  trainingTrace.ts  worldTypes.ts
demo/: DEVPOST-FINAL.md  DEVPOST-SUBMISSION.md  DIRECTOR-GUIDE.md  JUDGE-TESTING.md  SUBMISSION-CHECKLIST.md  VOICEOVER.md
scripts/: start-training-chamber.mjs  sync-training-code.mjs
tests/: assistant-feature.test.mjs  rendered-html.test.mjs
trainer/: .gitignore  README.md  pyproject.toml
trainer/configs/: local.toml  toy.toml
trainer/src/chamber_trainer/: __init__.py  checkpoint.py  cli.py  config.py  corpus.py  data.py  engine.py  generation.py  inference.py  model.py  runtime.py  service.py  tokenizer.py
trainer/tests/: test_config_and_cli.py  test_inference_service.py  test_markers.py  test_runtime_and_service.py  test_tokenizer_and_corpus.py  test_torch_core.py
(+10 files in other folders)
